# farm

./: .gitignore  pnpm-lock.yaml
rust-plugins/enhanced-tsconfig-paths/: .gitignore  Cargo.toml  package.json
rust-plugins/enhanced-tsconfig-paths/npm/darwin-arm64/: README.md  package.json
rust-plugins/enhanced-tsconfig-paths/npm/darwin-x64/: README.md  package.json
rust-plugins/enhanced-tsconfig-paths/npm/linux-arm64-gnu/: README.md  package.json
rust-plugins/enhanced-tsconfig-paths/npm/linux-arm64-musl/: README.md  package.json
rust-plugins/enhanced-tsconfig-paths/npm/linux-x64-gnu/: README.md  package.json
rust-plugins/enhanced-tsconfig-paths/npm/linux-x64-musl/: README.md  package.json
rust-plugins/enhanced-tsconfig-paths/npm/win32-arm64-msvc/: README.md  package.json
rust-plugins/enhanced-tsconfig-paths/npm/win32-ia32-msvc/: README.md  package.json
rust-plugins/enhanced-tsconfig-paths/npm/win32-x64-msvc/: README.md  package.json
rust-plugins/enhanced-tsconfig-paths/playground/: farm.config.ts  package.json  pnpm-lock.yaml
rust-plugins/enhanced-tsconfig-paths/playground/apps/: farm.config.ts  package.json
rust-plugins/enhanced-tsconfig-paths/playground/libs/: tsconfig.json
rust-plugins/enhanced-tsconfig-paths/scripts/: index.js
rust-plugins/enhanced-tsconfig-paths/src/: lib.rs  path_matcher.rs  tsconfig_loader.rs
rust-plugins/react/: index.d.ts
rust-plugins/remove-console/: Cargo.toml  package.json
rust-plugins/remove-console/scripts/: index.js
rust-plugins/remove-console/src/: lib.rs
rust-plugins/remove-console/tests/: mod.rs
(+25 files in other folders)
