[package]
edition = "2021"
name = "enhanced_tsconfig_paths"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { version = "*" }
farmfe_toolkit_plugin_types = { version = "*" }
farmfe_macro_plugin = { version = "*" }
anyhow = "1"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }

